k8s/dept.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dept-dev
  namespace: ns-dev
spec:
  selector:
    matchLabels:
      app: dept-dev
  replicas: 2 # tells deployment to run 2 pods matching the template
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: dept-dev
    spec:
      containers:
      - name: dept-dev
        image: 887870046594.dkr.ecr.us-east-2.amazonaws.com/devecr:number
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: 0.5
          limits:
            memory: "256Mi"
            cpu: 1
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd
